feat(release): Added release feature and harmonized some font and button styles
